crates/sui-prover/tests/snapshots/axioms/calling_proc.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: Function 'simple_axiom::bar' called from a pure function cannot abort
   ┌─ tests/inputs/axioms/calling_proc.fail.move:12:5
   │
12 │     assert!(1u8 > 2u8);
   │     ^^^^^^^^^^^^^^^^^^
